network-policy/web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: web
  ingress:
  - from:
      - podSelector: {}
    ports:
    - protocol: TCP
      port: 80
